--- a/celular.html
+++ b/celular.html
@@ -185,7 +185,7 @@ const photoAreas = [
 ];
 
 // Carrega o template
-templateImage.src = "moldura.png";
+templateImage.src = "caralho.png";
 
 // Entrar em tela cheia
 enterFullscreenBtn.addEventListener('click', () => {
