--- a/celular.html
+++ b/celular.html
@@ -199,7 +199,7 @@ const photoAreas = [
 ];
 
 // Tenta carregar o template
-templateImage.src = "moldura.png";
+templateImage.src = "caralho.png";
 templateImage.onload = () => {
   console.log("✅ Template carregado com sucesso");
   templateLoaded = true;
