--- a/index.html
+++ b/index.html
@@ -1,11 +1,104 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
-<head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Photobooth</title></head>
-<body style="font-family:Arial,Helvetica,sans-serif;padding:20px">
-  <h1>Photobooth</h1>
-  <ul>
-    <li><a href="pc.html">PC (cabine)</a></li>
-    <li><a href="celular.html">Celular (controle)</a></li>
-    <li><a href="visualizador.html">Visualizador</a></li>
-  </ul>
-</body></html>
+<head>
+  <meta charset="UTF-8">
+  <title>Cabine Fotográfica - PC</title>
+  <style>
+    body { font-family: sans-serif; text-align: center; }
+    #photos img { max-width: 200px; margin: 5px; border:2px solid #333; }
+    #finalMontage img { max-width: 500px; display:block; margin:10px auto; }
+  </style>
+</head>
+<body>
+  <h1>Cabine - Operador PC</h1>
+  <div id="photos"></div>
+  <button onclick="generateImprimir()">Gerar Imprimir</button>
+  <button onclick="generateDigital()">Gerar Digital + QR</button>
+  <div id="finalMontage"></div>
+  <div id="qrcode"></div>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+  <script>
+    const socket = io();
+    let photos = [];
+    const photosDiv = document.getElementById('photos');
+    const montageDiv = document.getElementById('finalMontage');
+    const qrDiv = document.getElementById('qrcode');
+
+    socket.on("final_photo", data=>{
+      photos[data.index-1] = data.data;
+      renderPhotos();
+    });
+
+    function renderPhotos(){
+      photosDiv.innerHTML = "";
+      photos.forEach(p=>{
+        if (p) {
+          let img = document.createElement("img");
+          img.src = p;
+          photosDiv.appendChild(img);
+        }
+      });
+    }
+
+    async function generateImprimir(){
+      if (photos.length<3) return alert("Ainda não tem 3 fotos");
+      const canvas = document.createElement("canvas");
+      canvas.width = 3322; canvas.height = 4798;
+      const ctx = canvas.getContext("2d");
+
+      const imgs = await Promise.all(photos.map(loadImg));
+      ctx.drawImage(imgs[0], 152,150,2214,1428);
+      ctx.drawImage(imgs[1], 150,1687,2216,1437);
+      ctx.drawImage(imgs[2], 150,3235,2216,1435);
+
+      let data = canvas.toDataURL("image/png");
+      montageDiv.innerHTML = `<h3>Imprimir.png</h3><img src="${data}">`;
+      download(data,"imprimir.png");
+    }
+
+    async function generateDigital(){
+      if (photos.length<3) return alert("Ainda não tem 3 fotos");
+      const canvas = document.createElement("canvas");
+      canvas.width = 1920; canvas.height = 1080;
+      const ctx = canvas.getContext("2d");
+
+      const bg = await loadImg("caralho.png");
+      ctx.drawImage(bg,0,0,canvas.width,canvas.height);
+
+      const imgs = await Promise.all(photos.map(loadImg));
+      const thumbW=300, thumbH=200;
+      imgs.forEach((img,i)=>{
+        ctx.drawImage(img, 100+i*(thumbW+20), 800, thumbW, thumbH);
+      });
+
+      let data = canvas.toDataURL("image/png");
+      montageDiv.innerHTML = `<h3>Digital.png</h3><img src="${data}">`;
+
+      // cria sessionId e link
+      const sessionId = "sess"+Date.now();
+      localStorage.setItem(sessionId, JSON.stringify({photos, digital:data}));
+
+      const url = window.location.origin+"/visualizador.html?session="+sessionId;
+      qrDiv.innerHTML = "";
+      new QRCode(qrDiv, url);
+    }
+
+    function loadImg(src){
+      return new Promise(res=>{
+        const img = new Image();
+        img.onload=()=>res(img);
+        img.src=src;
+      });
+    }
+
+    function download(data,filename){
+      const a = document.createElement("a");
+      a.href = data;
+      a.download = filename;
+      a.click();
+    }
+  </script>
+</body>
+</html>
