--- a/visualizador.html
+++ b/visualizador.html
@@ -1,65 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Sua Foto - Cabine Fotográfica</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-    margin: 0;
-    padding: 20px;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: white;
-  }
-  h1 {
-    margin-bottom: 30px;
-    text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-  }
-  img {
-    max-width: 90%;
-    max-height: 70vh;
-    border: 10px solid white;
-    border-radius: 15px;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-  }
-  .loading {
-    font-size: 1.2em;
-    margin: 20px;
-  }
-</style>
+  <meta charset="UTF-8">
+  <title>Visualizador</title>
+  <style>
+    body { font-family:sans-serif; text-align:center; }
+    img { max-width:90%; margin:10px; border:2px solid #333; }
+  </style>
 </head>
 <body>
-  <h1>📸 Sua Foto da Cabine</h1>
-  <div id="photoContainer">
-    <div class="loading">Carregando sua foto...</div>
-  </div>
+  <h1>Sua Galeria</h1>
+  <div id="gallery"></div>
+  <script>
+    const params = new URLSearchParams(window.location.search);
+    const sessionId = params.get("session");
+    const data = JSON.parse(localStorage.getItem(sessionId) || "{}");
+    const gal = document.getElementById("gallery");
 
-<script>
-  const params = new URLSearchParams(location.search);
-  const photoUrl = params.get('photo');
-  
-  if (photoUrl) {
-    const img = document.createElement('img');
-    img.src = photoUrl;
-    img.onload = () => {
-      document.getElementById('photoContainer').innerHTML = '';
-      document.getElementById('photoContainer').appendChild(img);
-    };
-    img.onerror = () => {
-      document.getElementById('photoContainer').innerHTML = 
-        '<p>Erro ao carregar a foto. O link pode ter expirado.</p>';
-    };
-  } else {
-    document.getElementById('photoContainer').innerHTML = 
-      '<p>Nenhuma foto para exibir.</p>';
-  }
-</script>
+    if (data.photos) {
+      data.photos.forEach(p=>{
+        let img = document.createElement("img");
+        img.src = p;
+        gal.appendChild(img);
+      });
+    }
+    if (data.digital) {
+      let img = document.createElement("img");
+      img.src = data.digital;
+      gal.appendChild(img);
+    }
+  </script>
 </body>
 </html>
