--- a/celular.html
+++ b/celular.html
@@ -2,89 +2,92 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Cabine Fotográfica - Celular</title>
+  <title>Cabine de Fotos - Celular</title>
   <style>
-    body, html { margin:0; padding:0; background:black; color:white; font-family:sans-serif; text-align:center; height:100%; overflow:hidden; }
-    #preview, #frozenPreview { position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; }
-    #countdown { position:absolute; top:20px; left:0; right:0; font-size:80px; font-weight:bold; }
-    #message { position:absolute; bottom:20%; left:0; right:0; font-size:60px; }
-    #thanks { display:none; position:absolute; top:0; left:0; width:100%; height:100%; background:black; color:white; display:flex; justify-content:center; align-items:center; font-size:50px; }
+    body, html { margin:0; padding:0; background:black; color:white; font-family:Arial; text-align:center; }
+    #preview, #frozenPreview { width:100%; height:100%; object-fit:cover; position:absolute; top:0; left:0; }
+    #countdown, #message { position:absolute; top:40%; left:50%; transform:translate(-50%,-50%); font-size:5em; }
+    #message { font-size:3em; }
+    #thankyou { display:none; position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); font-size:3em; }
   </style>
 </head>
 <body>
   <video id="preview" autoplay playsinline></video>
-  <canvas id="frozenPreview"></canvas>
+  <canvas id="frozenPreview" style="display:none;"></canvas>
   <div id="countdown"></div>
   <div id="message"></div>
-  <div id="thanks">Obrigado por usar a cabine 🎉</div>
+  <div id="thankyou">🙏 Obrigado por usar a cabine!</div>
+
+  <audio id="clack" src="clack.mp3"></audio>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
-    const video = document.getElementById('preview');
-    const frozen = document.getElementById('frozenPreview');
-    const countdown = document.getElementById('countdown');
-    const message = document.getElementById('message');
-    const thanks = document.getElementById('thanks');
     const socket = io();
+    const video = document.getElementById('preview');
+    const frozenPreview = document.getElementById('frozenPreview');
+    const ctx = frozenPreview.getContext('2d');
+    const countdownEl = document.getElementById('countdown');
+    const messageEl = document.getElementById('message');
+    const thankyouEl = document.getElementById('thankyou');
+    const clack = document.getElementById('clack');
 
-    let ctx = frozen.getContext('2d');
-    frozen.style.display = 'none';
+    let photoCount = 0;
+    let totalPhotos = 3;
 
     navigator.mediaDevices.getUserMedia({ video: true })
-      .then(stream => video.srcObject = stream);
-
-    const shutter = new Audio("clack.mp3");
+      .then(stream => { video.srcObject = stream; });
 
     async function takePhotoSequence() {
-      let photos = [];
-      for (let i=0; i<3; i++) {
-        await countdownAndCapture(i+1, photos);
+      for (let i = 0; i < totalPhotos; i++) {
+        await startCountdown();
+        capturePhoto();
+        await wait(3000); // 3s congelada
       }
-      // terminou -> mostra obrigado
-      video.style.display = 'none';
-      frozen.style.display = 'none';
-      countdown.innerText = "";
-      message.innerText = "";
-      thanks.style.display = 'flex';
+      endSequence();
     }
 
-    function countdownAndCapture(index, photos) {
-      return new Promise(resolve=>{
+    function startCountdown() {
+      return new Promise(resolve => {
         let count = 5;
-        countdown.innerText = count;
-        message.innerText = "";
-        let timer = setInterval(()=>{
+        countdownEl.textContent = count;
+        const interval = setInterval(() => {
           count--;
-          countdown.innerText = count > 0 ? count : "";
-          if (count === 2) shutter.play();
-          if (count === 1) message.innerText = "SORRIA 📸";
+          countdownEl.textContent = count;
+          if (count === 2) clack.play();
+          if (count === 1) messageEl.textContent = "SORRIA 📸";
           if (count === 0) {
-            clearInterval(timer);
-            capturePhoto(index, photos);
+            clearInterval(interval);
+            countdownEl.textContent = "";
+            messageEl.textContent = "";
             resolve();
           }
         }, 1000);
       });
     }
 
-    function capturePhoto(index, photos) {
-      frozen.width = video.videoWidth;
-      frozen.height = video.videoHeight;
-      ctx.drawImage(video, 0, 0, frozen.width, frozen.height);
-      frozen.style.display = 'block';
-      video.style.display = 'none';
+    function capturePhoto() {
+      frozenPreview.width = video.videoWidth;
+      frozenPreview.height = video.videoHeight;
+      ctx.drawImage(video, 0, 0, frozenPreview.width, frozenPreview.height);
+      frozenPreview.style.display = "block";
 
-      let data = frozen.toDataURL("image/png");
-      photos.push(data);
-      socket.emit("final_photo", { index, data });
+      const dataUrl = frozenPreview.toDataURL('image/png');
+      socket.emit('final_photo', { photo: dataUrl });
 
-      setTimeout(()=>{
-        frozen.style.display = 'none';
-        video.style.display = 'block';
-        message.innerText = "";
-      }, 3000);
+      setTimeout(() => { frozenPreview.style.display = "none"; }, 3000);
     }
 
+    function wait(ms) { return new Promise(r => setTimeout(r, ms)); }
+
+    function endSequence() {
+      video.style.display = "none";
+      frozenPreview.style.display = "none";
+      countdownEl.style.display = "none";
+      messageEl.style.display = "none";
+      thankyouEl.style.display = "block";
+    }
+
+    // inicia
     takePhotoSequence();
   </script>
 </body>
